test/negative/111_no_type_after_colon.fx
// expect: type is expected
val x: = 5
println(x)
