test/negative/111_no_type_after_colon.err
111_no_type_after_colon.fx:2:8: error: type is expected here (starting from indent, type var, '(' or '{'
